--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 # 📟 Changelog
 
+## 1.3.1 (2023-01-12)
+
+
+### Bug Fixes
+
+* **wp:** wrong usage of esc fucntion (f01560b)
+
 ## 1.3.0 (2023-01-12)
 
 
