--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 # 📟 Changelog
 
+## 1.3.2 (2023-01-12)
+
+
+### Bug Fixes
+
+* **wp:** found internalization for variable (c2f41f9)
+
 ## 1.3.1 (2023-01-12)
 
 
