chore: prepare release v1.3.4

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,21 @@
 # 📟 Changelog
 
+## 1.3.4 (2023-01-14)
+
+
+### Bug Fixes
+
+* **wp:** create conditional section-hero-heading (c7cd73d)
+* **wp:** customizer display site title and tagline when custom logo not present (b8abfd9)
+* **wp:** fix non translatable text (2291b32)
+* **wp:** match license between readme.txt and style.css (8e86b51)
+* **wp:** remove default theme logo image. use Display site title and tagline (fc2a41f)
+* **wp:** remove template-parts content fullwidth and single (578557b)
+* **wp:** shows section hero both for mobile and desktop (261757a)
+* **wp:** template archive to use the_archive_title (1e44352)
+* **wp:** update require at least 5.5 (1d42340)
+* **wp:** use the_title instead of echoing it manually (bd8bee6)
+
 ## 1.3.3 (2023-01-12)
 
 
@@ -60,7 +76,6 @@
 * **wp:** remove freemius (1f57f70)
 * **wp:** remove modal-search.php the file is unused (75a6d22)
 * **wp:** remove unused files (274a230)
-* **wp:** update cc in screenshot.png remove freepik (db60eb9)
 
 ## 1.2.14 (2023-01-01)
 
