--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 # 📟 Changelog
 
+## 1.3.6 (2023-01-14)
+
+
+### Bug Fixes
+
+* **wp:** require wp_link_pages to be included (4132597)
+
 ## 1.3.5 (2023-01-14)
 
 
